Putting the wrinting in the middle, making the serpinsky carpet 100%, fixing the blurred borders, fixing other minor things

--- a/src/index.css
+++ b/src/index.css
@@ -9,15 +9,31 @@
   
 }
 #magnified-hero-div {
-  position:relative;
+  position: relative;
   overflow: hidden;
   line-height: 0;
+  width: 100vw;
+  height: calc(100vh - var(--navbar-height));
 }
 
 #hero-canvas {
   display: block;
-  height: calc(100vh - var(--navbar-height));
+  width: 100%;
+  height: 100%;
+}
 
+#welcome-section h1 {
+  position: absolute;
+  /* centered in the middle rectangle: x = 1/3 + 1/2 of 1/3 = 50% of canvas width */
+  /* middle rect spans canvas[1/3 .. 2/3] horizontally and vertically */
+  top: calc(50vh  ); /* vertical center of middle third */
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 50px;
+  font-weight: 150;
+  text-align: center;
+  width: 33vw; /* constrain to the middle rectangle width */
+  pointer-events: none;
 }
 .magnifier-glass {
   position: absolute;
@@ -28,13 +44,6 @@
   
 }
 
-#welcome-section h1 {
-  position: absolute;
-  top: 50vh;
-  left: calc(50vw - 50px);
-  font-size: 50px;
-  font-weight: 150;
-}
 
 #all-projects {
   width: 90%;
